Zipcode copy no longer breaks to new line on mobile viewports

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 .ip {
   color: #fff;
 }
+
+br.large {
+  display: block;
+}
+
+@media only screen and (max-width: 734px) {
+  br.large {
+      display: none;
+  }
+}
